--- a/HTML_CSS_JAVASCRIPT_STUDY/src/main/webapp/BuildingWebStandard/html/8.html
+++ b/HTML_CSS_JAVASCRIPT_STUDY/src/main/webapp/BuildingWebStandard/html/8.html
@@ -5,6 +5,32 @@
     <title>Title</title>
     <link rel="stylesheet" href="../css/reset.css">
     <style type="text/css">
+        /*--------------스킵네비게이션----------------*/
+
+        #skip{position: relative;}
+        #skip a {position: absolute; left: 0; top: -100px; border : 1px solid #fff; color: #fff; background: #333;
+        line-height: 30px;width: 140px;text-align: center;
+        }
+        #skip a:active,
+        #skip a:focus{top: 0;}
+
+        /*----------------header-menu-----------------*/
+
+        .header{}
+
+        .header-menu{
+        text-align: right
+        }
+
+        .header-menu a{
+
+            padding: 10px 0px 10px 13px; display: inline-block;color: #fff;
+        }
+
+        .header-menu a:hover{
+            color: #666;
+
+        }
 
      .container{
 
@@ -57,8 +83,21 @@
 </head>
 <body>
 
+<!--//스킵 네비게이션-->
+<div id="skip">
+    <a href="#cont_nav">네비게이션 바로가기</a>
+    <a href="#cont_tit">타이틀 바로가기</a>
+    <a href="#cont_ban">배너 바로가기</a>
+    <a href="#cont_cont">콘텐츠 바로가기</a>
+</div>
 <div id="wrap">
-    <div id="header"><div class="container">header</div></div>
+    <div id="header"><div class="container">
+        <div class="header-menu">
+            <a href="Designer">Designer</a>
+            <a href="Publisher">Publisher</a>
+            <a href="Youtube">Youtube</a>
+        </div>
+    </div></div>
     <div id="cont_nav"><div class="container">cont_nav</div></div>
     <div id="cont_tit"><div class="container">cont_tit</div></div>
     <div id="cont_ban"><div class="container">cont_ban</div></div>
